# Camelotte

./: .gitignore  .gitmodules  README.md  dune-project  flake.nix  monadise.opam  next.opam  ppx_deriving_biniou.opam  spacedout.opam  testu01.opam  valet.opam
.github/: renovate.json5
.github/workflows/: ci.yaml
monadise/: monadise-lwt.nix  monadise.nix
monadise/lib/: monadise_lwt.ml
next/: next.nix
next/lib/: dune  nextGRead.ml  nextGWrite.ml  nextList.ml  nextString.ml
next/test/: dune  run.ml  test_nextGRead.ml  test_nextGWrite.ml  test_nextList.ml  test_nextString.ml
ppx_deriving_biniou/: README.md  flake-part.nix  ppx_deriving_biniou.nix
ppx_deriving_biniou/lib/: dune  ppx_deriving_biniou.ml  ppx_deriving_biniou_runtime.ml
ppx_deriving_biniou/test/: dune  expectation_test.t  roundtrip_test.ml  test.ml  utils.ml
ppx_deriving_madcast/: ppx_deriving_madcast.nix
ppx_deriving_madcast/test/: dune
ppx_monad/: ppx_monad.nix
spacedout/: flake-part.nix  spacedout.nix
spacedout/lib/: dune  read.ml  write.ml
testu01/: dune  flake-part.nix  testu01.nix
testu01/.github/workflows/: ci.yml
testu01/examples/bat1/: dune
testu01/examples/bat2/: dune
testu01/examples/bat3/: bat3.ml  dune
testu01/examples/birth1/: dune
testu01/examples/birth2/: birth2.ml  dune
testu01/probdist/: dune
testu01/testu01/: bbattery.ml  smarsa.ml  smarsa_stubs.c  sres_stubs.c  unif01.ml
valet/: valet.nix
